unstable; media queries not coming in at right time

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,12 +1,15 @@
 .home {
 
+  .intro-section {
+    padding-top: 30px;
+    border-bottom: 2px dashed @navigation-border;
+  }
+
   .content-section {
     margin: 30px 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-
-   
     
     .text-content {
       width: 48%;
@@ -19,6 +22,20 @@
 
       img {
         border-radius: 10px;
+      }
+    }
+
+    @media(max-width: @phone) {
+      .flex(@direction: column;);
+
+      .img-content {
+        width: 100%;
+        padding: 0;
+      }
+
+      .text-content {
+        width: 100%;
+        padding: 0;
       }
     }
   }
@@ -35,6 +52,10 @@
     .img-content {
       padding-right: 1%;
       padding-left: 0;
+    }
+
+    @media(max-width: @phone) {
+      .flex(@direction: column-reverse;);
     }
   }
 
