--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,34 @@
 // Navigation Styles here
+
+.nav {
+    width: 100%;
+    border-bottom: 2px dashed @navigation-border;
+    padding: 30px 0;
+    
+    .nav-content{
+        max-width: 800px;
+        margin: 0 auto;
+        .flex();
+
+        .nav-links .links {
+            font-size: 1.6rem;
+            text-decoration: none;
+            color: black;
+            margin: 0 20px;
+        }
+    
+        @media(max-width: @phone) {
+            flex-direction: column;
+        
+            .nav-links {
+                width: 100%;
+                margin-top: 30px;
+                .flex(@justify: space-around;);
+            }
+    
+            .nav-links .links {
+                color: red;
+            }
+        }
+    }
+}
