--- a/less/mixins.less
+++ b/less/mixins.less
@@ -9,8 +9,8 @@
 }
 
 .btn {
-    width: 82%;
-    height: 45px;
+    padding: 2rem 2rem;
+    width: 100%;
     color: white;
     font-size: 1.6rem;
     text-align: center;
