--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,6 @@
 .btn {
-  width: 82%;
-  height: 45px;
+  padding: 2rem 2rem;
+  width: 100%;
   color: white;
   font-size: 1.6rem;
   text-align: center;
@@ -211,9 +211,6 @@ img {
     align-items: center;
     justify-content: space-around;
   }
-  .nav .nav-content .nav-links .links {
-    color: red;
-  }
 }
 .footer {
   width: 100%;
@@ -292,6 +289,11 @@ img {
 .home .content-destination img {
   border-radius: 10px;
 }
+@media (max-width: 500px) {
+  .home .content-destination {
+    width: 90%;
+  }
+}
 .home .content-pick {
   padding-top: 30px;
   border-top: 2px dashed #C0C0C0;
@@ -301,4 +303,16 @@ img {
 .home .content-pick .destination {
   width: 30%;
   margin-bottom: 30px;
+}
+@media (max-width: 500px) {
+  .home .content-pick {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .home .content-pick .destination {
+    width: 80%;
+  }
 }
